Fix invalid method